@@ -14,9 +14,71 @@
         <async-supported>true</async-supported>
     </filter>    
 
+	<filter>
+		<filter-name>dandelionFilterCandidacies</filter-name>
+		<filter-class>com.github.dandelion.core.web.DandelionFilter</filter-class>
+	</filter>
+
+	<filter>
+		<filter-name>dandelionFilterBase</filter-name>
+		<filter-class>com.github.dandelion.core.web.DandelionFilter</filter-class>
+	</filter>
+
+
     <filter-mapping>
         <filter-name>blueRecordFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+    
+	<filter-mapping>
+		<filter-name>dandelionFilterCandidacies</filter-name>
+		<url-pattern>/candidacies/*</url-pattern>
+	</filter-mapping>
+	
+	<filter-mapping>
+		<filter-name>dandelionFilterBase</filter-name>
+		<url-pattern>/base/*</url-pattern>
+	</filter-mapping>
+
+	<!-- Dandelion servlet definition and mapping -->
+	
+	<servlet>
+		<servlet-name>dandelionServletCandidacies</servlet-name>
+		<servlet-class>com.github.dandelion.core.web.DandelionServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>dandelionServletCandidacies</servlet-name>
+		<url-pattern>/candidacies/dandelion-assets/*</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>datatablesControllerCandidacies</servlet-name>
+		<servlet-class>com.github.dandelion.datatables.extras.servlet2.servlet.DatatablesServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>datatablesControllerCandidacies</servlet-name>
+		<url-pattern>/candidacies/datatablesController/*</url-pattern>
+	</servlet-mapping>
+    
+    
+	<!-- Dandelion servlet definition and mapping -->
+	<servlet>
+		<servlet-name>dandelionServletBase</servlet-name>
+		<servlet-class>com.github.dandelion.core.web.DandelionServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>dandelionServletBase</servlet-name>
+		<url-pattern>/base/dandelion-assets/*</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>datatablesControllerBase</servlet-name>
+		<servlet-class>com.github.dandelion.datatables.extras.servlet2.servlet.DatatablesServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>datatablesControllerBase</servlet-name>
+		<url-pattern>/base/datatablesController/*</url-pattern>
+	</servlet-mapping>
     
 </web-fragment>
