@@ -1,3 +1,5 @@
+- Refactor: Move to this module, Dandelion configurations from fenixedu-candidacies-extensions and fenixedu-base web-fragment [#qubIT-Omnis-5884]
+
 7.15.3 (27-05-2024)
 - Refactor: Removes unnecessary jsps [#qubIT-Omnis-5850]
 
